--- a/Aula 2 - CRUD/Mini-Rede-Social/style.css
+++ b/Aula 2 - CRUD/Mini-Rede-Social/style.css
@@ -82,7 +82,7 @@ li {
 }
 
 .card-post{
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     align-items: center;
 }
